# knowledge-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.json  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: admin.yml  ci.yml  lint.yml  tests.yml  typecheck.yml
admin/: Dockerfile  README.md  biome.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
admin/src/: App.tsx  index.css  main.tsx  types.ts
bruno/: opencollection.yml
bruno/api-keys/: Revoke an API key.yml  folder.yml
bruno/chats/: Create an OpenAI-compatible chat completion.yml  Get aggregated chat completion usage statistics.yml  Get chat completion request usage logs.yml  folder.yml
bruno/documents/: Create a document.yml  Delete a document.yml  Get a document.yml  Get documents.yml  Search document chunks.yml  Upload a file.yml  folder.yml
bruno/embedding-models/: Create an embedding model.yml  Delete an embedding model.yml  Get embedding models.yml  folder.yml
bruno/environments/: local.yml  prod.yml
bruno/knowledge-bases/: Create a knowledge base.yml  Delete a knowledge base.yml  Get knowledge bases.yml  folder.yml
bruno/models/: Create an LLM model.yml  Delete an LLM model.yml  Get LLM models.yml  Get OpenAI-compatible models.yml  Get an LLM model by id.yml  Update an LLM model.yml  folder.yml
bruno/monitoring/: Healthcheck.yml  folder.yml
bruno/providers/: Create an inference provider.yml  Get providers.yml  folder.yml
bruno/users/: Create a user.yml  Create an api-key.yml  Delete a user.yml  Get API Keys.yml  Get a user by id.yml  Get users.yml  Update a user.yml  folder.yml
docker/: Dockerfile  Dockerfile.migrate
docker/loki/: loki-config.yml
docker/prometheus/: prometheus.yml
docker/promtail/: promtail-config.yml
docker/qdrant/: production.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_007c9b236873fc7c_cookies_py.html  z_007c9b236873fc7c_dependencies_py.html  z_007c9b236873fc7c_routes_py.html  z_007c9b236873fc7c_schema_py.html  z_007c9b236873fc7c_services_py.html  z_007c9b236873fc7c_session_store_py.html  z_01a22bae042dd9ab_client_py.html  z_01a22bae042dd9ab_schema_py.html  z_01a22bae042dd9ab_vector_store_py.html  z_03415682551221b3_cookies_py.html  z_03415682551221b3_dependencies_py.html  z_03415682551221b3_routes_py.html  z_03415682551221b3_schema_py.html  z_03415682551221b3_services_py.html  z_03415682551221b3_session_store_py.html  z_09e2eae7804eda3b_dependencies_py.html  z_09e2eae7804eda3b_models_py.html  z_09e2eae7804eda3b_orchestrator_py.html  z_09e2eae7804eda3b_prompts_py.html  z_09e2eae7804eda3b_repositories_py.html  z_09e2eae7804eda3b_routes_py.html  z_09e2eae7804eda3b_schema_py.html  z_09e2eae7804eda3b_services_py.html  z_09e2eae7804eda3b_sse_py.html  z_0a334d81462cccc5_api_keys_py.html  z_0a334d81462cccc5_dependencies_py.html  z_0a334d81462cccc5_encryption_py.html  z_0a334d81462cccc5_passwords_py.html  z_12d22c730544d965_client_py.html  z_12d22c730544d965_rate_limiter_py.html  z_152377f3327cc42e_config_py.html  z_152377f3327cc42e_dependencies_py.html  z_152377f3327cc42e_models_py.html  z_152377f3327cc42e_repositories_py.html  z_152377f3327cc42e_routes_py.html  z_152377f3327cc42e_schema_py.html  (+159 more)
migrations/: env.py
migrations/versions/: 1210209440ba_add_fields_min_score_and_system_promt_.py  1a2b3c4d5e6f_create_document_models.py  23b010c1c175_add_password_hash_field_to_users.py  3007890ac5f6_add_requests_per_minute_to_users.py  4116f779bda5_add_embedding_models_and_knowledge_bases.py  57793cce665f_initial_migration.py  58a2aa08f833_add_knowledge_base_tracking_to_chat_.py  6322d650d1c7_add_llm_models.py  8cf49b9b8fa4_create_user_and_api_key_models.py  a990d31a29da_add_chatcompletionrequestlogmodel.py  e5d184400dd5_add_providers_and_link_llm_models.py  e807e6f763c0_rename_ollama_metrics_to_provider_.py
src/: config.py  lifecycle.py  log_config.py  logging.py  main.py  middlewares.py  routes.py  schema.py  utils.py
src/database/: __init__.py  base_model.py  config.py
src/exceptions/: __init__.py  domain.py  handlers.py  (+2 more)
tests/: conftest.py  test_metrics.py  test_openapi_responses.py  test_pagination.py
(+251 files in other folders)
