[project]
name = "rag-service"
version = "0.1.0"
description = "FastAPI service for OpenAI-compatible RAG chat completions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy==1.9.3",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
]

[dependency-groups]
api = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "markitdown[docx,pdf]>=0.1.6",
    "openai>=1.59.0",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "redis[asyncio]>=5.0.0",
    "scalar-fastapi>=1.8.2",
    "uvicorn[standard]>=0.47.0",
]
migrate = [
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
    "ty>=0.0.38",
]

[tool.uv]
default-groups = ["api", "migrate", "dev"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "TCH", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["rag_service"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
