[project]
name = "knowledge-gateway"
version = "0.2.1"
description = "FastAPI service for OpenAI-compatible RAG chat completions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy==1.9.3",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "cryptography>=49.0.0",
    "argon2-cffi>=25.1.0"
]

[dependency-groups]
api = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "markitdown[docx,pdf]>=0.1.6",
    "openai>=1.59.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "scalar-fastapi>=1.8.2",
    "uvicorn[standard]>=0.47.0",
]
migrate = [
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
    "ty>=0.0.55",
]

[tool.uv]
default-groups = ["api", "migrate", "dev"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "TCH", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["rag_service"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
